2012-01-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* sawfish.spec: sync spec-file with Fedora [Kim B. Heino]

2012-01-04  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/integration/razor.jl: add integration-module for
	Razor-Qt

	* lisp/sawfish/wm/user.jl: same

2011-12-27  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/integration/mate.jl: add integration-module for MATE

	* lisp/sawfish/wm/user.jl: same

	* lisp/sawfish/wm/ext/single-window-mode.jl: properly call
	maximize-window-fullscreen

2011-10-04  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/shade-stack.jl: added shade-stack feature.
	Original code by: Luke Gorrie. Changes compared to original:
		- module format // defun -> define
		- renamed already-stacked to window-shade-stacked-p
		- fixed bug were stacking couldn't be done,
		  caused by inexact instead of exact integers

2011-09-24  Christopher Roy Bratusek <nano@tuxfamily.org>
	* src/display.c: use XKB [Michal Maruska]

	* src/pixmap-cache.c: - append_to_age_list rather than prepend
			      - extend pixmap-cache-control to return more info
			      - pixmap-cache-images: return the list of all
			      images in cache
			      -- [Michal Maruska]

	* src/events.c: - simplify property_notify
			- apply property change only if window has 'refresh
			property
			- avoid Xmap for gone windows
			- possible segfault fix in leave_notify
			-- [Michal Maruska]

2011-09-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* src/display.c: when making X request, we might receive, and select
	will stuck. This is prevented now. [Michal Maruska]

	* src/display.c: drop unused prog_name from display.c [Michal Maruska]

	* src/windows.c: mark mapped_not_override_p static [Michal Maruska]

	* src/windows.c: better place for XAddToSaveSet [Michal Maruska]

2011-09-08  Christopher Roy Bratusek <nano@tuxfamily.org>
	* src/display.c: Fix a bug in manager selection handling. Set all