@@ -1,3 +1,6 @@
+2012-01-19  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/integration/razor.jl: fix razor-power calls
+
 2012-01-14  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* sawfish.spec: sync spec-file with Fedora [Kim B. Heino]
 
